error.log
file:///C:/Users/voee1/.gemini/antigravity/scratch/Farkle-staging/analytics.js:5
import UAParser from 'ua-parser-js';
       ^^^^^^^^
SyntaxError: The requested module 'ua-parser-js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.21.1
